[package]
name = "land-dblayer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcrypt = "0.15.0"
chrono = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
rand = "0.8.5"
sea-orm = { version = "0.12.9", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls"
] }
sea-orm-migration = "0.12.6"
serde = { workspace = true }
strum = { version = "0.25.0", features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true }
