[package]
name = "land-dblayer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcrypt = "0.15.0"
chrono = { workspace = true }
clap = { workspace = true }
land-common = { workspace = true }
once_cell = { workspace = true }
opendal = { workspace = true }
rand = "0.8.5"
sea-orm = { version = "0.12.10", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls"
] }
sea-orm-migration = "0.12.10"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
