[package]
name = "land-migration"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Database migration for Runtime Land"
license = "Apache-2.0"
documentation = "https://runtime.land"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "serverless"]
repository = "https://github.com/fuxiaohei/runtime.land"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
