[package]
name = "land-restful"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
gravatar = "0.2.0"
land-core = { path = "../core" }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.40"
tokio = { workspace = true }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = { workspace = true }
url = "2.4.0"
validator = { version = "0.16.0", features = ["derive"] }
