[package]
name = "land-rpc"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
gravatar = "0.2.0"
http = { workspace = true }
land-core = { path = "../core" }
prost = "0.11.9"
rand = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.9.2", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots"
] }
tonic-web = "0.9.2"
tower-http = "0.4.0"
tower = { version = "0.4.0", features = ["timeout"] }
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"

[lib]
doctest = false
